//使用 proto3 语法 ,未指定则使用proto2
syntax = "proto3";

// proto 文件包名
package protobuf.p2;

//生成 proto 对应源文件的文件名
option java_outer_classname="Stu";

import "book.proto";

message Student{
  int32 id = 1;
  string name = 2;
  bool boy = 3;
  repeated string listString = 4;
  map<string, string> mapString = 5;

  repeated Book listBook = 6;

  map<string, Book> mapBook = 7;
}
